--- a/Lab_Management.v1/src/main/resources/templates/admin/equipments.html
+++ b/Lab_Management.v1/src/main/resources/templates/admin/equipments.html
@@ -117,5 +117,79 @@
     <script th:src="@{/js/app.js}"></script>
     <script th:src="@{/js/demo.js}"></script>
 </equipment>
+
+<recall-equip>
+    <h1 style="margin-top: 50px; text-align: center;text-transform: uppercase;" > Danh sách thiết bị đã thu hồi
+        <a th:href="'/Lab/admin/Export/Recall'" >
+            <img src="/images/download.png" alt="Tải xuống" style="max-width: 2%" >
+        </a>
+    </h1>
+    <h1 style=" text-align: center; font-size: 2em" th:text="'Số lượng: ' + ${quantity}"></h1>
+    <br>
+    <div class="main-card mb-3 card">
+        <div class="card-body">
+            <table style="width: 100%;" id="example" class="table table-hover table-striped table-bordered">
+                <thead>
+                <tr>
+                    <th>STT</th>
+                    <th>Tên thiết bị</th>
+                    <th>Số seri</th>
+                    <th>Phân cấp TTB</th>
+                    <th>Ngày thu hồi</th>
+                    <th>Ghi chú</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="recallEqui, iter : ${recallEquipmentDTOS}">
+                    <td th:text="${iter.index + 1}"></td>
+                    <td th:text="${recallEqui.equipment.name}"></td>
+                    <td>
+                        <th:block th:each="seri : ${recallEqui.serieList}">
+                            <p th:text="${seri}" style="margin: unset"></p>
+                        </th:block>
+                    </td>
+                    <td>
+                        <th:block th:each="level : ${recallEqui.levelList}">
+                            <p th:text="${level}" style="margin: unset"></p>
+                        </th:block>
+                    </td>
+                    <td>
+                        <th:block th:each="recallDate : ${recallEqui.recallDateList}">
+                            <p th:text="${recallDate}" style="margin: unset"></p>
+                        </th:block>
+                    </td>
+                    <td>
+                        <th:block th:each="note : ${recallEqui.noteList}">
+                            <p th:text="${note}" style="margin: unset"></p>
+                        </th:block>
+                    </td>
+                </tr>
+                </tbody>
+                <tfoot>
+                <tr>
+                    <th>STT</th>
+                    <th>Tên thiết bị</th>
+                    <th>Số seri</th>
+                    <th>Phân cấp TTB</th>
+                    <th>Ngày thu hồi</th>
+                    <th>Ghi chú</th>
+                </tr>
+                </tfoot>
+            </table>
+        </div>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!--Phải load jquery trước khi load bootstrap js-->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <!--CORE-->
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+            integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.bundle.min.js"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/metismenu"></script>
+    <script th:src="@{/js/app.js}"></script>
+    <script th:src="@{/js/demo.js}"></script>
+</recall-equip>
 </body>
 </html>
